[project]
name = "percolation-summarizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.4.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "datasets==5.0.0",
    "dill==0.4.1",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "huggingface-hub==1.20.1",
    "idna==3.18",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "numpy==2.5.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "pyarrow==24.0.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "rouge-score==0.1.2",
    "scipy==1.18.0",
    "six==1.17.0",
    "tqdm==4.68.3",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "xxhash==3.7.0",
    "yarl==1.24.2",
]
